# RustyFile

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  Makefile  README.md  build.rs  config.toml.example  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/plans/: 2026-04-07-distribution-pipeline.md
docs/specs/: 2026-04-07-distribution-pipeline-design.md
docs/superpowers/plans/: 2026-04-08-search-and-security-fixes.md
docs/superpowers/specs/: 2026-04-08-search-and-security-fixes-design.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.css  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BottomNav.tsx  Breadcrumbs.tsx  DropZone.tsx  ErrorBoundary.tsx  FileList.tsx  FileRow.tsx  Layout.tsx  Sidebar.tsx  UploadFAB.tsx  UploadManager.tsx  VideoControls.tsx
frontend/src/hooks/: useAuth.tsx  useDragDrop.ts  useFiles.ts  useSearch.ts  useTusUpload.ts
frontend/src/lib/: icons.ts  (+3 more)
migrations/: V1__initial_schema.sql  V2__tus_and_cache.sql  V3__search_index.sql
src/: config.rs  error.rs  frontend.rs  lib.rs  main.rs  state.rs
src/api/: auth.rs  download.rs  files.rs  health.rs  hls.rs  mod.rs  search.rs  setup.rs  thumbs.rs  tus.rs
src/db/: mod.rs  user_repo.rs
src/services/: cache.rs  file_ops.rs  mod.rs  search_index.rs  thumbnail.rs  transcoder.rs
tests/: auth_test.rs  download_test.rs  files_test.rs  frontend_test.rs  health_test.rs  search_test.rs  setup_test.rs
tests/helpers/: mod.rs
(+7 files in other folders)
