[package]
name = "rustyfile"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[features]
default = ["embed-frontend"]
embed-frontend = ["dep:rust-embed"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "set-header", "limit"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
rusqlite = { version = "0.32", features = ["bundled"] }
deadpool-sqlite = "0.9"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
rust-embed = { version = "8", features = ["compression"], optional = true }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
